# seq2yield-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-ci.txt
archive_notebooks_readonly/: 1_kmers.ipynb  2_Train_Non_Deep_Regressors.ipynb  3_Train_Convolutional_Networks.ipynb  4_ExplainableAI.ipynb  5_Plot_Results.ipynb  6_Yeast.ipynb
configs/: agent_roles.yaml  council_policy.yaml  data.yaml  experiment_budget.yaml  maturity_tiers.yaml  methodology_pitfalls.yaml  metrics.yaml  objective.yaml  protected_files.yaml  provider_policy.yaml  runtime.yaml  search_policy.yaml  splits.yaml
docs/: ARCHITECTURE.md  BACKLOG.md  CONTRACTS.md  CRITIQUE.md  DATASET_SCHEMA.md  DECISIONS.md  HARDENING_PLAN.md  INFRA_AUDIT.md  ONBOARDING.md  PROJECT_SPEC.md  REPRODUCTION.md  RESEARCH_AGENDA.md
envs/: embed-rna-requirements.txt
experiments/: memory.jsonl
scripts/: audit_archive.py  build_baseline.py  build_dashboard.py  build_dataset.py  build_splits.py  build_yeast.py  check_providers.py  config_app.py  extract_embeddings.py  ingest_history.py  inject_question.py  onboard_dataset.py  replay_trajectory.py  reproduce_baselines.py  run_agent_loop.py  run_biology_architect.py  run_campaign.py  run_config_transfer.py  run_console.py  run_council.py  run_council_eval.py  run_dashboard.py  run_diagnostics_demo.py  run_experiment.py  run_hpo_distribution.py  run_insight.py  run_joint.py  run_mixed_effects.py  run_onboarding.py  run_patch_loop.py  run_queue.py  run_search.py  run_search_gate.py  run_show.py  run_strata.py  run_tournament.py  (+6 more)
(+273 files in other folders)
